# py-f-conda-package

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
conda.recipe/: bld.bat  build.sh  meta.yaml
src/pyf/: __init__.py  cli.py  plot.py  quadratic.f90
