[metadata]
name = pyf
version = 1.0.0
author = Sam Harrison
author_email = samharrison.xg@gmail.com
description = A demo package showing how to build a Conda package with Fortran and Python code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samharrison7/py-f-conda-package
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy
    matplotlib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyf = pyf.cli:run